--- a/HTMLCSS3_SEO/Inlamningar/Inlamning3/css/style.css
+++ b/HTMLCSS3_SEO/Inlamningar/Inlamning3/css/style.css
@@ -16,7 +16,7 @@ body{
     max-width: 1006px;
     margin: 0 auto;
 }
-
+/*label för menyn */
 label {
     color:red;
     line-height: 40px;
@@ -44,11 +44,12 @@ label {
 .syndicate:nth-child(3n+2) {
     background: #5b6b74;
 }
-
+/* checkbox */
 #nav-toggle {
     display: none;
 }
 
+/* När checkboxen är checked, visas wrappers nav. */
 #nav-toggle:checked + #wrapper nav {
     display: block;
 
@@ -56,7 +57,7 @@ label {
 /* :link betyder att alla links i a ska ha en sorts style */
 
 header nav {
-	display: none;
+    display: none;
 }
 
 
@@ -79,13 +80,18 @@ header nav ul{
   opacity:0.95;
 }
 
+/*  
+    regler som bestämmer bakrundsfärgen på mobilens nav
+    paddingen som det ska bli för varje ul 
+*/
+
 header nav ul li{
 background: darkgrey;
 padding-left: 40px;
 }
 
 nav ul li ul a{
-    color: black;
+    color: red !important;
   }
 
 
@@ -94,17 +100,19 @@ nav a:hover
         color: white;
 }
 nav ul li ul a{
-    color: red;
+    color: black;
   }
 
 a:visited {
-    color: red;
+    color: black;
 }
   
-  /*Den andra undermenyn färgläggs lite annorlunda på mobilen för att kunna skiljas från övre li*/
+
   nav ul ul li ul a{
-    color:black;
+    color:blue !important;
   }
+
+/* Regler för span som är i en cirkel */
 
   nav span {
     border-radius: 50%;
@@ -117,49 +125,52 @@ a:visited {
 
 
 @media all and (min-width: 630px){
+    
+     /* På desktop vill vi inte visa checkboxen */
+
     label{
         display:none;
     }
 
+    header nav ul ul ul {
+        display: none;
+    }
+
+    header nav ul ul li {
+        display: none;
+    }
+
     header nav {
+        height: 40px;
         display: block;
         margin: 0 auto;
         width: 1006px;
     }
 
+    /*
+        Kontrollerar hur menyn ska se ut på desktop
+        float för att visa menyerna brevid varandra
+    */
 
-    header nav ul li{
-        background: darkgrey;
-        padding: 0px;
-        height: 60px;
-        }
-
-    nav ul {
+    header nav ul li {
+        float: left;
+        width: 200px;
+        height: 40px;
+        line-height: 40px;
+        background-color: darkgray;
+        padding-left: 0px;
+        opacity: 0.95;
+        margin-right: 1px;
         text-align: center;
     }
 
-    nav ul li {
-        float: left;
-        width: 200px;
-        margin-right: 1px;
-    
-    }
-/*Döljer dropdown*/
-header nav ul ul li{
-	position:relative; /* sätter positionen till vara relativt till sin behållare*/
-	display:none;
-}
-
-/*Döljer submenyn i dropdown*/
-header nav ul ul ul{
-	display:none;
-  
-}
-
-/*Visar dropdown vid hover på ul li*/
+/*
+        Gör så att man kan sa extra undermenyer åt sidan istället för
+        direkt under den föregående undermenyn
+    */
 nav ul li:hover ul li{
+    position: relative;
     display: block;
-  
 }
 
 /*Visar submenyn i dropdown*/
@@ -171,6 +182,9 @@ nav ul ul li:hover ul{
 	top:0px; /*absolute position högst mot sin förälder*/
   
 }
+/*
+        Gör så sista li i varje ul förutom huvud ul rundade hörn
+    */
 nav ul ul li:last-child, nav ul ul li:last-child a:hover {
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
