--- a/HTMLCSS3_SEO/Inlamningar/Inlamning4/css/styles.css
+++ b/HTMLCSS3_SEO/Inlamningar/Inlamning4/css/styles.css
@@ -94,6 +94,7 @@ footer {
         display:none;
         position: absolute;
         width: 100%;
+       
 
     }
 
@@ -104,6 +105,7 @@ footer {
 
 nav ul{
     display:flex;
+    justify-content: flex-end;
 }
 nav ul li{
     position: relative;
