--- a/HTMLCSS3_SEO/Inlamningar/Inlamning5b/css/style.css
+++ b/HTMLCSS3_SEO/Inlamningar/Inlamning5b/css/style.css
@@ -1,4 +1,8 @@
-body {
+*{
+	list-style: none;
+}
+	
+	body {
 	margin: 0;
 }
 
@@ -51,6 +55,7 @@ Typography
 
 body {
 	margin: 0;
+	background-color: whitesmoke;
 }
 
 body,
@@ -153,6 +158,28 @@ figure {
 	margin: 0;
 }
 
+label {
+    color:red;
+    line-height: 40px;
+    font-size:2em;
+    cursor:pointer;
+}
+
+/* checkbox */
+#nav-toggle {
+    display: none;
+}
+
+/* När checkboxen är checked, visas wrappers nav. */
+#nav-toggle:checked + #wrapper nav {
+    display: block;
+
+}
+
+
+header nav {
+    display: none;
+}
 
 /*--------------------------------------------------------------
 General styling
@@ -167,15 +194,21 @@ img {
 }
 
 
-/* Header */
+
 
 .masthead {
 	padding: 0 1em;
 	text-align: center;
 	border-bottom: 1px solid hsl(0, 0%, 90%);
 }
+a:link {
+	color: black;
+	text-decoration: none;
+}
 
-
+a:visited {
+	color: black;
+}
 /*--------------------------------------------------------------
 Cards:
 --------------------------------------------------------------*/
@@ -223,17 +256,18 @@ CSS Grid layout for wider screens, when browser supports grid:
 
 	@media screen and (min-width: 27em) {
 
-		.cards {
-            margin: 0 auto;
-			padding: 1em;
-		}
 
-		.card {
+		.cards {
             /*lägger texten till höger om bilden*/
             display: grid;
-            grid-template-columns: 8em auto;
-            margin: 1em 0;
-			padding: .5em;
+            grid-template-columns: 1fr 1fr;
+            margin: 0 auto;
+			padding: 1em;
+			grid-template-areas: 
+			"box6 box7"
+			"box8 box9";
+			
+		
 		}
 
 		.cards a:focus,
@@ -243,38 +277,137 @@ CSS Grid layout for wider screens, when browser supports grid:
 	}
 
 	@media screen and (min-width: 60em) {
-        
-        /* Lägger bilderna i 2 columner */
-        .cards {
-			display: grid;
-			grid-template-columns: 25em 25em;
-			max-width: 100%;
-			width: 910px;
-            margin: 0 auto;
-        }
+		
+		label{
+			display:none;
+		}
+	
+		header nav ul ul ul {
+			display: none;
+		}
+	
+		header nav ul ul li {
+			display: none;
+		}
+	
+		header nav {
+			display: flex;
+			justify-content: flex-end;
+		}
 
-        /* Double bilderna sträker sig över 3 rutor */
-        .double {
-            grid-column: span 1;
-            grid-row: span 3;
-
-        }
-
-        .card {
-            margin: 0;
-        } 
-
-        /* Så bilden följer storleken på spanen */
-        .card-item.double figure {
-            height: auto;
-            display: block;
-        }
+		nav ul li:hover ul li{
+			position: relative;
+			display: block;
+		}
 
 		.masthead {
-			color: black;
+			display: flex;
+			align-items: baseline;
+			justify-content: space-between;
+		}
+					
+        .cards {
+			display: grid;
+			grid-gap: 1em;
+			margin: 0 auto;
+			max-width: 100%;
+			grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+			grid-template-areas:
+			"box1 box2 box2 box3 box3"
+			"box4 box2 box2 box5 box5"
+			"box6 box6 box7 box5 box5"
+			"box8 box8 box8 box8 box8"
+			}
+
+
+
+		.card-item1 {
+			grid-area: box1;
 		}
 
 
-    }
+		.card-item2 {
+			grid-area: box2;	
+		}
 
+		.card-item3 {
+			grid-area: box3;	
+		}
+
+		.card-item4 {
+		
+			grid-area: box4;	
+		}
+
+		.card-item5 {
+		
+			grid-area: box5;	
+		}
+
+		.card-item6 {
+			grid-area: box6;	
+		}
+
+		.card-item7 {
+			grid-area: box7;	
+		}
+
+		.card-item8 {
+			grid-area: box8;
+		}
+
+		
+
+
+
+		
+		nav ul {
+			display: flex;
+			flex-direction: row;
+			padding: 0;
+		}
+		
+		nav ul li {
+			padding: 1em;
+			font-size: 20px;
+		}
+		
+		nav ul ul li {
+			padding: 0.5em 0em;
+		}
+		
+		nav ul li {
+			position: relative;
+		}
+		
+		nav ul ul {
+			position: absolute;
+			width: 100%;
+		}
+		
+		nav li:hover ul {
+			display: flex;
+		}
+		
+		nav ul ul li:hover ul li {
+			position: relative;
+			display: block;
+			width: 50px;
+			left: 100%;
+			top: -30px;
+		}
+		
+		nav ul ul ul li {
+			display: none;
+		}
+		
+		nav ul ul {
+			display: none;
+		}
+		
+		nav ul li:hover ul {
+			display: flex;
+			flex-direction: column;
+		}
+	}
 }
